--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.telchina.wx">
+    package="com.telchina.wx"
+    android:installLocation="preferExternal">
 
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="22" />
 
+    <uses-feature 
+        android:name="android.hardware.camera2"
+        android:required="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
+        android:logo="@mipmap/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
