--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name=".MyApplication">
+        android:name=".test.MyApplication">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -25,6 +25,13 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".news.NewsContentActivity"
+            android:label="@string/menu_group_news">
+            <intent-filter>
+                <action android:name="com.telchina.wx.NEWS" />
             </intent-filter>
         </activity>
     </application>
