--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,26 +12,31 @@
         android:required="true" />
 
     <application
+        android:name=".test.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".test.MyApplication">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:configChanges="screenSize|orientation|keyboardHidden">
+            android:configChanges="screenSize|orientation|keyboardHidden"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".news.NewsContentActivity"
+            android:label="@string/news_content">
+        </activity>
+
+        <activity android:name=".news.NewsListActivity"
             android:label="@string/menu_group_news">
             <intent-filter>
                 <action android:name="com.telchina.wx.NEWS" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
